--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Responsive Portfolio Website",
   "main": "index.js",
   "scripts": {
-    "sass": "node-sass -w scss/ -o dist/include/css/ --recursive --usePolling --polling-interval 1000"  
+    "sass": "node-sass -w scss/ -o dist/include/css/ --recursive --usePolling --polling-interval 1000"
   },
   "author": "Toby Chow",
   "license": "MIT",
   "dependencies": {
+    "lodash": "^4.17.15",
     "node-sass": "^4.11.0"
   }
 }
